--- a/tokenomic/model.mdx
+++ b/tokenomic/model.mdx
@@ -1,5 +1,4 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: "Revenue Model"
+description: "Description of your new file."
 ---
-
