Documentation edits made through Mintlify web editor

--- a/tokenomic/token.mdx
+++ b/tokenomic/token.mdx
@@ -1,4 +1,34 @@
 ---
 title: "$THINKR Token"
-description: "Description of your new file."
+description: "Token Utility & Economics"
 ---
+
+The ThinkR ecosystem is powered by the \$THINKR token, a native utility token built on the Ethereum blockchain. It is meticulously designed to facilitate access to advanced features, incentivize active participation, and strategically align the interests of its users with the sustained growth and long-term success of the platform. The token's utility extends beyond a simple payment mechanism for services, creating a robust holding mechanism that directly links user value to the token's performance. This model fosters a loyal user base and establishes a direct correlation between the platform's functionality and the token's intrinsic value, positioning \$THINKR as a core component of the ecosystem's overall value proposition.
+
+## Token Details
+
+| Name             | ThinkR                                     |
+| ---------------- | ------------------------------------------ |
+| Ticker           | \$THINKR                                   |
+| Decimals         | 9                                          |
+| Chain            | Ethereum Mainet                            |
+| Contract Address | 0x000000000000000000000000000000000000dead |
+| Total Supply     | 100000000                                  |
+| Public Market    | 70%                                        |
+| Marketing & KOLS | 10%                                        |
+| Development      | 10% (Linear Vesting)                       |
+| Revenue Sharing  | 10% (Linear Vesting)                       |
+
+## \$THINKR Token Utility
+
+### Access to ThinkR Platform
+
+To gain full access to the comprehensive ThinkR platform and its array of AI-driven, institutional-grade trading signals, users are required to hold a minimum of **200,000 \$THINKR** tokens. These signals are generated through ThinkR's multi-dimensional analysis, which synergistically synthesizes insights from advanced chart pattern recognition, real-time news aggregation and sentiment analysis (from validated sources like Bloomberg Terminal), and social media sentiment decoding (especially on X/Twitter). Our proprietary algorithms identify high-probability trading opportunities with exceptional accuracy, aiming for "near-perfect" outcomes by cross-validating across these disparate data types.
+
+### Auto-Trade Feature
+
+ThinkR's cutting-edge auto-trade feature represents the pinnacle of automated trading, offering users the capability to seamlessly connect their exchange accounts and automatically execute trades based on ThinkR's institutional-grade signals. Access to this highly sought-after functionality is contingent upon users holding a minimum of **500,000 \$THINKR **tokens. Users can securely link their preferred Centralized Exchanges (CEXs) such as Binance, or Decentralized Exchanges (DEXs) like Hyperliquid, via API keys. With this feature, trades are opened and closed automatically, precisely following the entry, stop loss, and take profit parameters provided by ThinkR's AI in real-time.
+
+### ThinkR Elite Community Access
+
+In addition to the auto-trade feature, users holding a minimum of **500,000 \$THINKR** tokens will gain exclusive access to an elite, private community. This dedicated space fosters a high-caliber environment for knowledge sharing, strategic discussions, and networking among other elite traders.
