--- a/help/autotrade.mdx
+++ b/help/autotrade.mdx
@@ -1,5 +1,4 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: "Auto Trade Guide"
+description: "Description of your new file."
 ---
-
